--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
 :root {
-    --body-color: rgb(250, 250, 250);
+    --body-color: #B7B5B3;
     --color-white: rgb(255, 255, 255);
     --text-color-second: rgb(68, 68, 68);
-    --text-color-third: rgb(30, 159, 171);
-    --first-color: rgb(110, 87, 224);
-    --first-color-hover: rgb(40, 91, 212);
-    --second-color: rgb(0, 201, 255);
-    --third-color: rgb(192, 166, 49);
+    --text-color-third: #6B2B06;
+    --first-color: #B80C09;
+    --first-color-hover: #E5E7E6;
+    --second-color: #6B2B06;
+    --third-color: #141301;
     --first-shadow-color: rgba(0, 0, 0, 0.1);
     
     /* Dark mode variables */
     --dark-body-color: #333;
-    --dark-text-color: #fff;
+    --dark-text-color: #E5E7E6;
     --dark-first-color: #222;
     --dark-second-color: #444;
     --dark-third-color: #555;
@@ -35,7 +35,7 @@ html{
     border-radius: 25px;
 }
 ::-webkit-scrollbar-track{
-    background: #f1f1f1;
+    background: #E5E7E6;
 }
 ::-webkit-scrollbar-thumb{
     background: #ccc;
@@ -88,7 +88,7 @@ body.dark-mode {
 }
 
 .avatar-img {
-    border: 10px solid #1E9FAB; 
+    border: 10px solid #6B2B06; 
     border-radius: 50%; 
 }
 
